improvements to createConfigDir, changes to tests