@@ -1,62 +1,67 @@
 package dev.kameleonnn.onmark.config;
 
-import dev.kameleonnn.onmark.FileRW;
-import dev.kameleonnn.onmark.Strings;
+import dev.kameleonnn.onmark.util.FileRW;
+import dev.kameleonnn.onmark.util.Strings;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+
 /**
  *
  * @author kameleonnn
  */
 public class Config {
-    private static final Config instance=new Config();
-    private static String configDir=null;
-    
-    private Config(){
+
+    private static final Config instance = new Config();
+    private static Path configDir = null;
+
+    private Config() {
     }
-    
-    public static Config getInstance(){
-	return instance;
+
+    public static Config getInstance() {
+        return instance;
     }
-    
-    public static void createConfigFiles(){
-        String baseDir = configDir+System.getProperty("file.separator");
+
+    public static void createConfigFiles() {
+        String baseDir = configDir + System.getProperty("file.separator");
         try {
-            FileRW.createFile(baseDir+Strings.CONFIG_FILE.text);
-            FileRW.createFile(baseDir+Strings.CONFIG_RECENTS.text);
-            Files.createDirectory(Paths.get(baseDir+Strings.CONFIG_USER_THEMES.text));
+            FileRW.createFile(baseDir + Strings.CONFIG_FILE.text);
+            FileRW.createFile(baseDir + Strings.CONFIG_RECENTS.text);
+            Files.createDirectory(Paths.get(baseDir + Strings.CONFIG_USER_THEMES.text));
         } catch (IOException ex) {
             Logger.getLogger(Config.class.getName()).log(Level.SEVERE, null, ex);
         }
     }
-    
-    public static String getConfigDir(){
-        if(configDir==null){
+
+    public static Path getConfigDir() {
+        if (configDir == null) {
             createConfigDir();
         }
         return configDir;
     }
-    
-    public static void createConfigDir(){
-        if(System.getProperty("os.name").equals("Linux")){
-            try {
-                configDir=System.getenv("HOME")+"/.config/onMark";
-                Files.createDirectory(Paths.get(configDir));
-            } catch (IOException ex) {
-                Logger.getLogger(Config.class.getName()).log(Level.SEVERE, Strings.CONFIG_CREATE_ERROR.text, ex);
-            }
-        } else{
-            if(System.getProperty("os.name").contains("Windows")){
-                try {
-                    configDir=System.getenv("APPDATA")+"\\onMark";
-                    Files.createDirectory(Paths.get(configDir)); 
-                } catch (IOException ex) {
-                    Logger.getLogger(Config.class.getName()).log(Level.SEVERE, Strings.CONFIG_CREATE_ERROR.text, ex);
-                }
-            }
+
+    public static void createConfigDir() {
+        String os_name = System.getProperty("os.name").toLowerCase();
+        if (os_name.contains("nix") || os_name.contains("nux")) {
+            configDir = Path.of(System.getProperty("user.home"), ".config", "onMark");
+        }
+        else if (os_name.contains("windows")) {
+            configDir = Path.of(System.getProperty("user.home"), "AppData", "Roaming","onMark");
+        }
+        else if (os_name.contains("mac") || os_name.contains("darwin")){
+            configDir  = Path.of(System.getProperty("user.home"), "Library", "Application Support", "onMark");
+        } else {
+            Logger.getLogger(Config.class.getName()).log(Level.WARNING, "Unsupported system, configuration files will be created in user directory");
+            configDir = Path.of(System.getProperty("user.home"), "onMark");
+        }
+
+        try {
+            Files.createDirectories(configDir);
+        } catch (IOException ex) {
+            Logger.getLogger(Config.class.getName()).log(Level.SEVERE, Strings.CONFIG_CREATE_ERROR.text, ex);
         }
     }
 
